--- a/FrontEnd/src/main/resources/templates/customerList.html
+++ b/FrontEnd/src/main/resources/templates/customerList.html
@@ -3,46 +3,49 @@
 <head>
     <meta charset="UTF-8">
     <title>Customer List</title>
+    <link rel="stylesheet" type="text/css" th:href="@{/styles.css}">
 </head>
-<style>
-    table, th, td {
-        border: 1px solid black;
-        border-collapse: collapse;
-        text-align: center;
-    }
 
-    table.center {
-        margin-left: auto;
-        margin-right: auto;
-    }
-    .title{
-        text-align: center;
-        font-size: 50px;
-    }
-</style>
 <body>
-    <h1 class="title">Customer List</h1>
-<table class="center" style="width:80%">
-    <thead>
-    <tr>
-        <th>ID</th>
-        <th>First Name</th>
-        <th>Last Name</th>
-        <th>Address</th>
-        <th>Age</th>
-        <th>Status</th>
-    </tr>
-    </thead>
-    <tbody>
-    <tr th:each="customer : ${customer}" >
-        <td th:text="${customer.id}"></td>
-        <td th:text="${customer.firstName}"></td>
-        <td th:text="${customer.lastName}"></td>
-        <td th:text="${customer.address}"></td>
-        <td th:text="${customer.age}"></td>
-        <td th:text="${customer.status}"></td>
-    </tr>
-    </tbody>
-</table>
+<div id="wrapper">
+    <h1>Customer List</h1>
+    <table id="keywords">
+        <thead>
+        <tr>
+            <th><span>ID</span></th>
+            <th><span>First Name</span></th>
+            <th><span>Last Name</span></th>
+            <th><span>Address</span></th>
+            <th><span>Age</span></th>
+            <th><span>Status</span></th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr th:each="customer : ${customer}">
+            <td class="lalign" th:text="${customer.id}"></td>
+            <td th:text="${customer.firstName}"></td>
+            <td th:text="${customer.lastName}"></td>
+            <td th:text="${customer.address}"></td>
+            <td th:text="${customer.age}"></td>
+            <td th:text="${customer.status}"></td>
+        </tr>
+        </tbody>
+    </table>
+
+    <div class="button-container">
+        <a href="http://localhost:8080/apartment" class="button-link">
+            <button class="button-1" role="button">Go to Apartment Page</button>
+        </a>
+
+        <a href="http://localhost:8080/contract" class="button-link">
+            <button class="button-2" role="button">Go to Contract Page</button>
+        </a>
+
+        <a href="http://localhost:8080" class="button-link">
+            <button class="button-3" role="button">Back to Main Page</button>
+        </a>
+    </div>
+
+</div>
 </body>
 </html>
