--- a/FrontEnd/src/main/resources/templates/index.html
+++ b/FrontEnd/src/main/resources/templates/index.html
@@ -2,9 +2,26 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Super Worker</title>
+    <link rel="stylesheet" type="text/css" th:href="@{/styles.css}">
 </head>
+
 <body>
-<h1>Hello World!!</h1>
+<h1>Super Worker Data!!!</h1>
+
+<div class="button-container">
+    <a href="http://localhost:8080/customer" class="button-link">
+        <button class="button-1" role="button">Go to Customer Page</button>
+    </a>
+
+    <a href="http://localhost:8080/contract" class="button-link">
+        <button class="button-2" role="button">Go to Contract Page</button>
+    </a>
+
+    <a href="http://localhost:8080/apartment" class="button-link">
+        <button class="button-3" role="button">Go to Apartment Page</button>
+    </a>
+</div>
+
 </body>
 </html>
