--- a/FrontEnd/src/main/resources/templates/apartmentList.html
+++ b/FrontEnd/src/main/resources/templates/apartmentList.html
@@ -5,7 +5,6 @@
     <title>Apartment List</title>
     <link rel="stylesheet" type="text/css" th:href="@{/styles.css}">
 </head>
-
 <body>
 <div id="wrapper">
     <h1>Apartment List</h1>
@@ -28,20 +27,46 @@
         </tbody>
     </table>
 
+    <!-- Script cua Import va Export -->
+    <script>
+        // Function to import file
+        function importFile() {
+            const fileInput = document.getElementById('file-input');
+            fileInput.click();
+            fileInput.addEventListener('change', () => {
+                const file = fileInput.files[0];
+                // Code o day
+            });
+        }
+
+        // Function to export file
+        function exportFile() {
+            // Code o day
+        }
+    </script>
+
+    <!-- Cac Button -->
     <div class="button-container">
-        <a href="http://localhost:8080/customer" class="button-link">
-            <button class="button-1" role="button">Go to Customer Page</button>
-        </a>
-
-        <a href="http://localhost:8080/contract" class="button-link">
-            <button class="button-2" role="button">Go to Contract Page</button>
-        </a>
-
-        <a href="http://localhost:8080" class="button-link">
-            <button class="button-3" role="button">Back to Main Page</button>
-        </a>
+        <!-- Import va Export-->
+            <form class="button-link">
+                <button type="button" class="button-1" role="button" onclick="importFile()">Import File</button>
+                <button type="button" class="button-2" role="button" onclick="exportFile()">Export File</button>
+                <input type="file" id="file-input" style="display: none;">
+            </form>
     </div>
 
+    <!-- Switch between HTML -->
+    <div class="button-container">
+        <a href="http://localhost:8080/customer" class="button-link">
+            <button class="button-3" role="button">Go to Customer Page</button>
+        </a>
+        <a href="http://localhost:8080/contract" class="button-link">
+            <button class="button-4" role="button">Go to Contract Page</button>
+        </a>
+        <a href="http://localhost:8080" class="button-link">
+            <button class="button-5" role="button">Back to Main Page</button>
+        </a>
+    </div>
 </div>
 </body>
 </html>
