--- a/FrontEnd/src/main/resources/templates/index.html
+++ b/FrontEnd/src/main/resources/templates/index.html
@@ -5,23 +5,22 @@
     <title>Super Worker</title>
     <link rel="stylesheet" type="text/css" th:href="@{/styles.css}">
 </head>
+<div id="wrapper">
+    <body>
+    <h1>Super Worker Data!!!</h1>
+    <div class="button-container">
+        <a href="http://localhost:8080/customer" class="button-link">
+            <button class="button-3" role="button">Go to Customer Page</button>
+        </a>
 
-<body>
-<h1>Super Worker Data!!!</h1>
+        <a href="http://localhost:8080/contract" class="button-link">
+            <button class="button-4" role="button">Go to Contract Page</button>
+        </a>
 
-<div class="button-container">
-    <a href="http://localhost:8080/customer" class="button-link">
-        <button class="button-3" role="button">Go to Customer Page</button>
-    </a>
-
-    <a href="http://localhost:8080/contract" class="button-link">
-        <button class="button-4" role="button">Go to Contract Page</button>
-    </a>
-
-    <a href="http://localhost:8080/apartment" class="button-link">
-        <button class="button-5" role="button">Go to Apartment Page</button>
-    </a>
+        <a href="http://localhost:8080/apartment" class="button-link">
+            <button class="button-5" role="button">Go to Apartment Page</button>
+        </a>
+    </div>
+    </body>
 </div>
-
-</body>
 </html>
